--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			color: rgb(144, 152, 165);
+			color:  #00687F;
 		}
 
 		.k-i-loading.k-example-loading::before,
@@ -54,7 +54,7 @@
 			border-color: currentColor;
 			border-top-color: transparent;
 			border-bottom-color: transparent;
-			background-color: transparent;
+			background-color:  #00687F;
 		}
 
 		.k-icon.k-i-loading.k-example-loading::before,
