--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-	</link>
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 	<style>
 		body {
@@ -37,7 +38,7 @@
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			color:  #00687F;
+			color: #00687F;
 		}
 
 		.k-i-loading.k-example-loading::before,
@@ -54,7 +55,7 @@
 			border-color: currentColor;
 			border-top-color: transparent;
 			border-bottom-color: transparent;
-			background-color:  #00687F;
+			background-color: #00687F;
 		}
 
 		.k-icon.k-i-loading.k-example-loading::before,
